--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,10 @@ a {
 	/* font-weight: 500;
 	color: #646cff; */
 	text-decoration: inherit;
+	/* transition: color 0.25s; */
 }
 /* a:hover {
-	color: #535bf2;
+	color: #d97b00;
 } */
 
 /* body {
@@ -48,10 +49,6 @@ button {
 	font-family: inherit;
 	background-color: #1a1a1a;
 	cursor: pointer;
-	transition: background-color 0.25s;
-}
-button:hover {
-	background-color: #d97b00;
 }
 button:focus,
 button:focus-visible {
